<resources>
    <string name="app_name">SmartMovies</string>
    <string name="pref_key">movie_prefs</string>
    <string name="description">Movie</string>

    <string name="title_top_rated">Top Rated</string>
    <string name="title_popular">Popular</string>
    <!--Favorites-->
    <string name="title_favorites">Favorites</string>

    <string name="add_to_favorites">Add to Favorite</string>
    <string name="watch_trailer">Trailers</string>
    <string name="reviews_tittle">Reviews</string>
    <!--Rating-->
    <string name="movie_rating">Rating: %1$s/10</string>


    <string name="message_network_alert">No Internet connection found, showing saved information.</string>

    <string name="error_message">
        An error has occurred. Please make sure you are connected to Internet. Or visit your favorite movie List.
    </string>
    <string name="original_tittle">Original tittle</string>
    <string name="poster">Poster</string>
    <string name="released">Released</string>
    <string name="no_favorite_message">No Favorite Movies Found</string>
    <string name="movie_backdrop">movie_backdrop</string>
    <string name="action_settings">Settings</string>


    <!-- - - - - - - - - - - -->
    <!--Used by Preferences  -->
    <!-- - - - - - - - - - - -->
    <string name="pref_default_search" translatable="false">top_rated</string>

    <string name="pref_search_top_rated" translatable="false">top_rated</string>
    <string name="pref_search_popular" translatable="false">popular</string>
    <string name="pref_search_favorite" translatable="false">favorite</string>



    <string name="pref_search_key" translatable="false">SEARCH_METHOD</string>

    <string name="pref_search_label" translatable="false">Favorite Search Method</string>


</resources>
