<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:background="@drawable/layout_bg"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/details_activity_vertical_margin"
        android:paddingTop="@dimen/details_activity_vertical_margin"
        tools:context=".details.MovieDetailFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/details_activity_horizontal_margin"
            android:paddingRight="@dimen/details_activity_horizontal_margin">

            <ImageView
                android:id="@+id/movie_poster"
                android:layout_width="@dimen/details_movie_poster_width"
                android:layout_height="@dimen/details_movie_poster_height"
                android:layout_marginBottom="@dimen/details_movie_poster_vertical_padding"
                android:layout_marginRight="@dimen/details_movie_poster_padding_right"
                android:scaleType="fitXY"
                android:contentDescription="@string/poster"
                android:layout_marginEnd="@dimen/details_movie_poster_padding_right" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/label_tittle"
                    style="?android:attr/textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textIsSelectable="true"
                    android:text="@string/original_tittle"
                    />

                <TextView
                    android:id="@+id/movie_title"
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/detail_title_bottom_margin"
                    android:layout_marginLeft="@dimen/detail_title_left_padding"
                    android:textColor="@color/black"
                    android:textIsSelectable="true"
                    android:textStyle="bold"
                    android:layout_marginStart="@dimen/detail_title_left_padding" />

                <TextView
                    android:id="@+id/label_released"
                    style="?android:attr/textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textIsSelectable="true"
                    android:text="@string/released"
                    />
                <TextView
                    android:id="@+id/movie_release_date"
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/detail_title_bottom_margin"
                    android:layout_marginLeft="@dimen/detail_title_left_padding"
                    android:textColor="@color/black"
                    android:textIsSelectable="true"
                    android:layout_marginStart="@dimen/detail_title_left_padding" />


                <include layout="@layout/user_rating"/>
                <TextView
                    android:id="@+id/movie_user_rating"
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textIsSelectable="true" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/movie_overview"
            style="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/details_activity_horizontal_margin"
            android:paddingRight="@dimen/details_activity_horizontal_margin"

            android:textColor="@color/black"
            android:textIsSelectable="true" />


        <TextView
            android:id="@+id/movie_trailer_title"
            style="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/watch_trailer"
            android:textColor="@color/smartGreen"
            android:textIsSelectable="true" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/movie_trailer_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/trailer_list_vertical_padding"
            android:paddingLeft="@dimen/details_activity_horizontal_margin"
            android:paddingRight="@dimen/details_activity_horizontal_margin"
            tools:listitem="@layout/trailer_list_container" />


        <TextView
            android:id="@+id/movie_review_title"
            style="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/reviews_tittle"
            android:textColor="@color/smartGreen"
            android:textIsSelectable="true" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/review_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/trailer_list_vertical_padding"
            android:paddingLeft="@dimen/details_activity_horizontal_margin"
            android:paddingRight="@dimen/details_activity_horizontal_margin"
            tools:listitem="@layout/reviews_list_container" />

    </LinearLayout>
</ScrollView>